Fixed Overflowing Issues

--- a/stylez/stylez.css
+++ b/stylez/stylez.css
@@ -8,7 +8,8 @@
     color: whitesmoke;
 }
 
-body{
+#wrapper{
+    position: relative;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
